<resources>
    <string name="app_name">Tube\nRepeat Free</string>
    <string name="app_name_premium">Tube\nRepeat Premium</string>
    <string name="introduce1">You can quickly search for a specific YouTube video you want.</string>
    <string name="introduce2">You can use a variety of convenient features that can enhance your viewing experience.</string>
    <string name="introduce3">You can store your favorite scenes in your playlist.</string>
    <string name="introduce4">You can watch YouTube videos while working on other tasks using the Floating Window (PIP) Feature.</string>
    <string name="introduce5">You can share your favorite moments and scenes with your friends.</string>
    <string name="introduce6">Powerful Music Listening Mode are optimized for music listening and battery saving!</string>
    <string name="guidelast">Press the Start button.</string>
    <string name="guidelast_content">Do you want to watch your favorite scenes over and over again? Do you want to learn a different lannguage? Do you have a song that you would like to listen to repetitively? Do not worry, this app will give you the fastest and easiest solution!</string>
    <string name="guidelast_start">Start</string>
    <string name="search_word_edittext_hint">Enter a keyword.</string>
    <string name="dialog_help_title">Help</string>
    <string name="dialog_help_feedback">Send Feedback</string>
    <string name="dialog_help_devlog">Devlog</string>
    <string name="dialog_help_pro">Premium Upgrade</string>
    <string name="dialog_help_manual">User Guide</string>
    <string name="dialog_help_opensource">OpenSource License</string>
    <string name="dialog_help_opensource_another">Other License</string>
    <string name="dialog_help_version">Version</string>
    <string name="dialog_help_version_no_item">You are using the free version.</string>
    <string name="dialog_help_version_yes_item">You are using the premium version.</string>
    <string name="dialog_help_facebook">Friend me on Facebook</string>
    <string name="dialog_help_instagram">Friend me on Instagram</string>
    <string name="player_numberpick">How many count will you repeat?</string>
    <string name="player_numberpick_invite">How many count will you repeat?\nSince you have invited friends, you can use 99 repeat count.</string>
    <string name="player_repeat_title">Setting repeat play</string>
    <string name="player_repeat_starttime">StartTime :</string>
    <string name="player_repeat_endtime">EndTime : </string>
    <string name="player_repeat_count">Count</string>
    <string name="player_repeat_starttime_picker">Please set the start time.</string>
    <string name="player_repeat_startendtime_picker">Please set the end time.</string>
    <string name="dialog_default_yes">Confirm</string>
    <string name="dialog_default_no">Cancel</string>
    <string name="playlist_add">Successfully added to playlist.</string>
    <string name="playlist_empty">The playlist is empty.\nPlease add more videos to the playlist.</string>
    <string name="playlist_delete">Would you like to delete the contents inside this playlist?</string>
    <string name="playlist_all_repeat_enable">All repeat feature enable.</string>
    <string name="playlist_all_repeat_disable">All repeat feature disable.</string>
    <string name="error_videos_emptyInfo">Information does not exist.</string>
    <string name="error_network">Sorry. A network error occurred.\nplease try again..</string>
    <string name="loading_pacman_text">Loading...\nPlease wait...</string>
    <string name="dialog_buy_title">YouTube Repeat Player PRO</string>
    <string name="dialog_buy_description">Get PRO benefits at a lower cost than a cup of coffee.\n
It is your very smart choice.\n\nPRO benefits\n
- Remove all ads.\n
- Unlock all features.\n
- Fastest feature update.</string>
    <string name="dialog_buy_cancel">Cancel</string>
    <string name="dialog_buy_pro">View details PRO</string>
    <string name="dialog_free_unlock">Unlock for free</string>
    <string name="invitation_title">invitation</string>
    <string name="invitation_message">The best YouTube video looping free player app</string>
    <string name="invitation_deep_link">https://play.google.com/store/apps/details?id=com.venuskimblessing.youtuberepeatlite</string>
    <string name="invitation_cta">Install</string>
    <string name="invitation_tip_title">Invite your friends!</string>
    <string name="invitation_tip_content">Invite your friends and get premium benefits.\n\nIf you invite ten of your friends, you will be able to unlock all locked premium features.</string>
    <string name="invitation_button">Invite your friends!</string>
    <string name="invitation_count">Invited Friends</string>
    <string name="invitation_complete">Congratulations! \n All premium features are unlocked.</string>
    <string name="sort_title">What order would you like to arrange your videos?</string>
    <string name="sort_date">Date</string>
    <string name="sort_relevance">Relevance</string>
    <string name="sort_rating">Rating</string>
    <string name="sort_viewCount">ViewCount</string>
    <string name="ending_dialog_title">Are you sure you want to quit the app?</string>
    <string name="ending_dialog_confirm">Yes</string>
    <string name="ending_dialog_cancel">No</string>
    <string name="dialog_help_devlog_link">https://www.facebook.com/RepeatYouTubePlayer/</string>
    <string name="dialog_help_sns_facebook">https://www.facebook.com/blessingvenushappy/</string>
    <string name="dialog_help_sns_instagram">https://www.instagram.com/blessingvenushappy/</string>
    <string name="dialog_recommend_title">Recommended YouTube videos that you can watch over and over again!</string>
    <string name="dialog_recommend_most">most popular</string>
    <string name="dialog_recommend_hometraining">home training</string>
    <string name="dialog_recommend_dance">dance practice</string>
    <string name="dialog_recommend_asmr">asmr</string>
    <string name="dialog_recommend_makeup">makeup practice</string>
    <string name="dialog_recommend_magic">magic practice</string>
    <string name="dialog_recommend_cook">how to cook</string>
    <string name="dialog_recommend_music">billboard music awards</string>
    <string name="dialog_recommend_sleep">sleep music</string>
    <string name="dialog_recommend_relaxing">relaxing music</string>
    <string name="dialog_recommend_kids">kids Animation</string>
    <string name="dialog_recommend_sexy">sexy</string>
    <string name="dialog_recommend_sexyani">sexy ani</string>
    <string name="dialog_recommend_sexysound">sexy sound</string>
    <string name="default_word">best movie scene hd</string>
    <string name="dialog_coffee_description">Upgrade to a powerful Pro version at a lower price than a cup of coffee.</string>
    <string name="dialog_coffee_infoTitle">Pro Version Upgrade</string>
    <string name="dialog_coffee_info">- No ads at all.\n- Dedicated features of PRO version will be added in the future.\n- Everyone who upgrades will always receive God blessing.\n\nThank you.\nI will make a lot of good features.</string>
    <string name="dialog_coffee_button">View Pro Version Details</string>
    <string name="dialog_chat_nick">Please enter your nickname.</string>
    <string name="dialog_chat_title">Global Chat Room</string>
    <string name="dialog_chat_join">Join</string>
    <string name="dialog_chat_send">Send</string>
    <string name="dialog_numberpick_infinite">Infinite</string>
    <string name="share_title">Introduce this fantastic app to your friends. thank you.♡</string>
    <string name="range_share_hint">show best moments to friends.</string>
    <string name="range_share_text">You should check out this!!</string>
    <string name="range_share_text2">Touch to watch video!</string>
    <string name="range_share_prefix">This is the best scene my friend recommended.</string>
    <string name="locked_feature_shuffle_title">Shuffle Play Feature</string>
    <string name="locked_feature_lock_title">Screen Lock Feature</string>
    <string name="locked_featrue_battery_title">Music Listening Mode</string>
    <string name="locked_feature_reward_content">The music listening mode experience is over.\n\nUpgrade to a premium version to enjoy various benefits of removing all ads and using all the premium features!</string>
    <string name="locked_feature_share_content">It is a premium feature.\n\nUpgrade to a premium version to enjoy various benefits of removing all ads and using all the premium features!\n\nIntroduce this app to your Facebook friends just once get rewarded with premium features for free!</string>
    <string name="locked_feature_buyPro">See the benefits of the premium version</string>
    <string name="locked_feature_share">Get features for free</string>
    <string name="locked_feature_reward">Watch ads and enjoy the service for free of charge</string>
    <string name="locked_feature_share_err">Introduce this app to your Facebook friends and get premium features!</string>
    <string name="unlocked_feature_title">Wow!!</string>
    <string name="unlocked_feature_content">Various features are now available.</string>
    <string name="unlocked_feature_reward_batterysaving_success">Thank you.\nYou can use unlimited music listening mode until the app is closed.</string>
    <string name="sub_feature_shuffle_empty">The playlist is empty.</string>
    <string name="sub_feature_shuffle_start">The playlist shuffle is on.</string>
    <string name="sub_feature_shuffle_cancel">The playlist shuffle is off.</string>
    <string name="prev_play_empty">No previous video</string>
    <string name="next_play_empty">No next video</string>
    <string name="required_playlist_feature">This feature is available to play a video from the playlist.</string>
    <string name="premium_title">Premium benefits</string>
    <string name="premium_text">Remove all ads</string>
    <string name="premium_text2">Unlimited use of all features</string>
    <string name="premium_text3">Continued new premium-only feature updates</string>
    <string name="premium_text4">A lifetime premium member with one purchase</string>
    <string name="premium_upgrade">Premium Upgrade</string>
    <string name="premium_upgrade_sale">Upgrade</string>
    <string name="buy_success">Congratulations!\n\nNow upgraded to the premium version.</string>
    <string name="buy_cancel">Your purchase has been canceled.</string>
    <string name="buy_error">A purchase error occurred. Error code </string>
    <string name="buy_already_have_premium">You are already a premium version user.\n\nThank you.</string>
    <string name="battery_top_hint">Activating battery saving mode...</string>
    <string name="battery_top_unlock_hint">slide to unlock</string>
    <string name="reward_failed">Failed to load an ad.\nAds will be reloaded up to three times.\nIf it continues to fail, a reward will be provided regardless of success.</string>
    <string name="reward_allRemoveAd_hint">Remove all ads for 2 hours</string>
    <string name="reward_allRemoveAd_success">Ads will be removed for 2 hours.\nWhen you exit the app, the effect of removing ads disappears.</string>
    <string name="reward_allRemoveAd_loading">Ad loading.\nPlease try again later.</string>
    <string name="reward_allRemoveAd_close">When you watch your ad video to the end, all ads will be removed.</string>
    <string name="reward_allRemoveAd_alreay">Premium Version</string>
    <string name="reward_allRemoveAd_alreay_sale">Premium 50% Sale!</string>
    <string name="reward_allRemoveAd_upgrade">Upgrade</string>
    <string name="reward_allRemoveAd_remove">Remove</string>
    <string name="snack_premium_hint">Upgrade premium version</string>
    <string name="snack_premium_details">Details</string>
    <string name="update_alert_yes">UPDATE</string>
    <string name="update_alert_cancel">CANCEL</string>
</resources>