<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recomment_menu_root_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/sort_menu_parent_lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#7F000000"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009688"
            android:padding="20dp"
            android:gravity="center"
            android:text="@string/dialog_recommend_title"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="#7F000000"
            android:orientation="vertical">

            <Button
                android:id="@+id/recommend_home_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#00000000"
                android:drawableTop="@drawable/ic_home_white_24dp"
                android:gravity="center"
                android:text="@string/dialog_recommend_hometraining"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/recommend_dance_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#00000000"
                android:drawableTop="@drawable/ic_dance_white_24dp"
                android:gravity="center"
                android:text="@string/dialog_recommend_dance"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/recommend_asmr_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#00000000"
                android:drawableTop="@drawable/ic_asmr_white_24dp"
                android:gravity="center"
                android:text="@string/dialog_recommend_asmr"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/recommend_makeup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#00000000"
                android:drawableTop="@drawable/ic_makeup_white_24dp"
                android:gravity="center"
                android:text="@string/dialog_recommend_makeup"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/recommend_magic_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:background="#00000000"
                android:drawableTop="@drawable/ic_magic_white_24dp"
                android:gravity="center"
                android:text="@string/dialog_recommend_magic"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
