<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/help_menu_parent_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#7F000000"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#009688"
            android:gravity="center"
            android:text="@string/sort_title"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#7F000000"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sort_date_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:drawableTop="@drawable/ic_sort_date_wite_24dp"
                android:gravity="center"
                android:text="@string/sort_date"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/sort_rating_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:drawableTop="@drawable/ic_sort_rating_white_24dp"
                android:gravity="center"
                android:text="@string/sort_rating"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/sort_relevance_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:drawableTop="@drawable/ic_sort_compare_arrows_white_24dp"
                android:gravity="center"
                android:text="@string/sort_relevance"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/sort_count_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:drawableTop="@drawable/ic_sort_streetview_white_24dp"
                android:gravity="center"
                android:text="@string/sort_viewCount"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
