<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_pro_title_textView"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#03A9F4"
            android:elevation="6dp"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/dialog_buy_title"
            android:padding="12dp"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/dialog_pro_description_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_buy_description"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="#757575"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/dialog_pro_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_buy_pro"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#FF9800"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/dialog_invite_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/dialog_free_unlock"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#4CAF50"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/dialog_cancel_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/dialog_buy_cancel"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#607D8B"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
