<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_invitation_parent_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="320dp"
        android:layout_height="500dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:background="#f2ddb0"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:src="@drawable/img_invitation_rabbit" />

            <TextView
                android:id="@+id/dialog_invitation_tip_title_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/invitation_tip_title"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_invitation_tip_content_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/invitation_tip_content"
                android:textColor="#FFFFFF"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/dialog_invitation_count_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/invitation_count"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/dialog_invitation_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="#FF9800"
                android:text="@string/invitation_button"
                android:textColor="#FFFFFF"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
