<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_invitation_parent_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#FFFFFF"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="ca-app-pub-8974353837020608/7983620742"></com.google.android.gms.ads.AdView>

        <TextView
            android:id="@+id/dialog_ending_title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/ending_dialog_title"
            android:textColor="#000000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ending_dialog_yes_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/ending_dialog_confirm"
                android:textSize="16dp" />

            <Button
                android:id="@+id/ending_dialog_no_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/ending_dialog_cancel"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
