<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_common_parent_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="320dp"
        android:layout_height="500dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:background="#f2ddb0"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dialog_common_logo_imageView"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@drawable/img_invitation_rabbit" />

            <TextView
                android:id="@+id/dialog_common_title_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:text="@string/invitation_tip_title"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_common_content_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:text="@string/invitation_tip_content"
                android:textColor="#FFFFFF"
                android:textSize="16dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/dialog_common_one_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:background="#FF9800"
                    android:text="@string/invitation_button"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/dialog_common_two_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:background="#FF9800"
                    android:text="@string/invitation_button"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/dialog_common_three_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:background="#FF9800"
                    android:text="@string/invitation_button"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
